unpackaged/main/default/objects/Case/fields/new_checkbox__c.field-meta.xml
<CustomField>
    <fullName>new_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>new checkbox</label>
    <type>Checkbox</type>
</CustomField>