unpackaged/main/default/objects/Case/fields/some_checkbox__c.field-meta.xml
<CustomField>
    <fullName>some_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>some checkbox</label>
    <type>Checkbox</type>
</CustomField>